[metadata]
name = python-mistralclient
summary = Mistral Client Library
description-file = README.md
#license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    #License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org

[files]
packages =
    mistralclient

[entry_points]
console_scripts =
    mistral = mistralclient.shell:main

[nosetests]
cover-package = mistralclient

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
