[metadata]
name = python-mistralclient
summary = Mistral Client Library
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/python-mistralclient/latest/

[files]
packages =
    mistralclient

[build_sphinx]
builders = html,man
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[entry_points]
console_scripts =
    mistral = mistralclient.shell:main

openstack.cli.extension =
    workflow_engine = mistralclient.osc.plugin

openstack.workflow_engine.v2 =
    workbook_list = mistralclient.commands.v2.workbooks:List
    workbook_show = mistralclient.commands.v2.workbooks:Get
    workbook_create = mistralclient.commands.v2.workbooks:Create
    workbook_delete = mistralclient.commands.v2.workbooks:Delete
    workbook_update = mistralclient.commands.v2.workbooks:Update
    workbook_definition_show = mistralclient.commands.v2.workbooks:GetDefinition
    workbook_validate = mistralclient.commands.v2.workbooks:Validate

    workflow_list = mistralclient.commands.v2.workflows:List
    workflow_show = mistralclient.commands.v2.workflows:Get
    workflow_create = mistralclient.commands.v2.workflows:Create
    workflow_delete = mistralclient.commands.v2.workflows:Delete
    workflow_update = mistralclient.commands.v2.workflows:Update
    workflow_definition_show = mistralclient.commands.v2.workflows:GetDefinition
    workflow_validate = mistralclient.commands.v2.workflows:Validate

    workflow_env_create = mistralclient.commands.v2.environments:Create
    workflow_env_delete = mistralclient.commands.v2.environments:Delete
    workflow_env_update = mistralclient.commands.v2.environments:Update
    workflow_env_list = mistralclient.commands.v2.environments:List
    workflow_env_show = mistralclient.commands.v2.environments:Get

    action_execution_run = mistralclient.commands.v2.action_executions:Create
    action_execution_list = mistralclient.commands.v2.action_executions:List
    action_execution_show = mistralclient.commands.v2.action_executions:Get
    action_execution_input_show = mistralclient.commands.v2.action_executions:GetInput
    action_execution_output_show = mistralclient.commands.v2.action_executions:GetOutput
    action_execution_update = mistralclient.commands.v2.action_executions:Update
    action_execution_delete = mistralclient.commands.v2.action_executions:Delete

    workflow_execution_create = mistralclient.commands.v2.executions:Create
    workflow_execution_delete = mistralclient.commands.v2.executions:Delete
    workflow_execution_update = mistralclient.commands.v2.executions:Update
    workflow_execution_list = mistralclient.commands.v2.executions:List
    workflow_execution_show = mistralclient.commands.v2.executions:Get
    workflow_execution_input_show = mistralclient.commands.v2.executions:GetInput
    workflow_execution_output_show = mistralclient.commands.v2.executions:GetOutput

    task_execution_list = mistralclient.commands.v2.tasks:List
    task_execution_show = mistralclient.commands.v2.tasks:Get
    task_execution_published_show = mistralclient.commands.v2.tasks:GetPublished
    task_execution_result_show = mistralclient.commands.v2.tasks:GetResult
    task_execution_rerun = mistralclient.commands.v2.tasks:Rerun

    action_definition_list = mistralclient.commands.v2.actions:List
    action_definition_show = mistralclient.commands.v2.actions:Get
    action_definition_create = mistralclient.commands.v2.actions:Create
    action_definition_delete = mistralclient.commands.v2.actions:Delete
    action_definition_update = mistralclient.commands.v2.actions:Update
    action_definition_definition_show = mistralclient.commands.v2.actions:GetDefinition

    cron_trigger_list = mistralclient.commands.v2.cron_triggers:List
    cron_trigger_show = mistralclient.commands.v2.cron_triggers:Get
    cron_trigger_create = mistralclient.commands.v2.cron_triggers:Create
    cron_trigger_delete = mistralclient.commands.v2.cron_triggers:Delete

    workflow_engine_service_list = mistralclient.commands.v2.services:List

    resource_member_list = mistralclient.commands.v2.members:List
    resource_member_show = mistralclient.commands.v2.members:Get
    resource_member_create = mistralclient.commands.v2.members:Create
    resource_member_delete = mistralclient.commands.v2.members:Delete
    resource_member_update = mistralclient.commands.v2.members:Update

mistralclient.auth =
    # Standard Keystone authentication.
    keystone = mistralclient.auth.keystone:KeystoneAuthHandler

    # Authentication using OpenID Connect protocol but specific to KeyCloak
    # server regarding multi-tenancy support. KeyCloak has a notion of realm
    # used as an analog of Keystone project/tenant.
    keycloak-oidc = mistralclient.auth.keycloak:KeycloakAuthHandler

[nosetests]
cover-package = mistralclient

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext

[pbr]
autodoc_index_modules = True
warnerrors = True
